syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.mrk.grpc.catalog";
option java_outer_classname = "CatalogProto";

message Product {
	string name = 1;
	string code = 2;
}

message Bundle {
	int64 quantity = 1;
	float price = 2;
}

message CatalogItem {
	Product product = 1;
  repeated Bundle bundles = 2;
}

message Catalog {
  string catalogId = 1;
  string catalogName = 2;
  repeated CatalogItem catalogItems = 3;
}

message Empty {}

message SearchRequest {
    string catalogName = 1;
    string productName = 2;
}

service CatalogService {
  rpc GetCatalogs(Empty) returns (stream Catalog) {}
  rpc GetCatalogByName(SearchRequest) returns (Catalog) {}
  rpc GetCatalogItemByName(SearchRequest) returns (stream CatalogItem) {}
}
